1. add actuator for all endpoint; 2. one test case for userLoginInfo; 3.start do security in api gateway

--- a/Ecommerce.APIGateway/src/main/resources/application.properties
+++ b/Ecommerce.APIGateway/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=9000
 spring.application.name=APIGateway
+
+#config Zuul proxy
+#config Load Balancer: default true
+#ribbon.eureka.enabled=true
+
+## actuator
+management.endpoints.web.exposure.include=*
+
+#secret for Security
+secret=secret
