--- a/Ecommerce.EurekaServer/src/main/resources/application.properties
+++ b/Ecommerce.EurekaServer/src/main/resources/application.properties
@@ -13,3 +13,7 @@ eureka.server.enable-self-preservation=false
 
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.preferIpAddress=true
+
+## actuator
+management.endpoints.web.exposure.include=*
+#management.endpoint.auditevents.enabled=true
