--- a/Ecommerce.InventoryService/src/main/resources/application.properties
+++ b/Ecommerce.InventoryService/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto= create
+
+## actuator
+management.endpoints.web.exposure.include=*
