--- a/Ecommerce.ProductCatelogService/pom.xml
+++ b/Ecommerce.ProductCatelogService/pom.xml
@@ -59,7 +59,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
