--- a/Ecommerce.UserManagementService/src/main/resources/application.properties
+++ b/Ecommerce.UserManagementService/src/main/resources/application.properties
@@ -2,10 +2,19 @@ server.port=9001
 spring.application.name=User-Management-Service
 
 ## database setting
-spring.datasource.url= jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username= system
-spring.datasource.password=123456
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto= create
+#spring.datasource.url= jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username= system
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.hibernate.ddl-auto= create
+
+## actuator
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
