add security in apigateway

--- a/Ecommerce.APIGateway/src/main/resources/application.properties
+++ b/Ecommerce.APIGateway/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.application.name=APIGateway
 ## actuator
 management.endpoints.web.exposure.include=*
 
-#secret for Security
-secret=secret
+#salt for Security encryption of JWT.
+salt=secretSalt
