--- a/Ecommerce.InventoryService/src/main/resources/application.properties
+++ b/Ecommerce.InventoryService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9003
-spring.application.name=Inventory
+spring.application.name=inventory
 
 ## database setting
 spring.datasource.url= jdbc:oracle:thin:@localhost:1521:orcl
