--- a/Ecommerce.ProductCatelogService/src/main/resources/application.properties
+++ b/Ecommerce.ProductCatelogService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9002
-spring.application.name=Product-Catelog
+spring.application.name=productCatelog
 
 ## actuator
 management.endpoints.web.exposure.include=*
